test_suite/tests/ui/transparent/enum.stderr
error: #[serde(transparent)] is not allowed on an enum
 --> tests/ui/transparent/enum.rs:4:1
  |
4 | / #[serde(transparent)]
5 | | enum E {}
  | |_________^
